--- a/kubernetes/db-deployment.yaml
+++ b/kubernetes/db-deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app-deployment
+  name: db-deployment
   namespace: kanderson
   labels:
-    app: app
+    app: db
 spec:
   replicas: 1
   strategy:
@@ -12,17 +12,17 @@ spec:
   minReadySeconds: 20
   selector:
     matchLabels:
-      app: app
+      app: db
   template:
     metadata:
       labels:
-        app: app
+        app: db
     spec:
       containers:
       - envFrom:
         - secretRef:
             name: db-secret
-        name: app-deployment
+        name: db-deployment
         image: harbor.dev.afsmtddso.com/keithjandersonharborproject/lab-env-repo@sha256:e476e9a7e328b765d7aa5812f51f9402bbf7a35508577a2ff4dbb2ff214c22d7
         ports:
-        - containerPort: 5000
+        - containerPort: 5432
